// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> renders with default props 1`] = `
<span
  className="sd-a-icon sd-a-icon--heart sd-a-icon--medium"
  role="img"
>
  <svg
    aria-hidden="true"
    className="sd-a-icon__svg"
    focusable="false"
  />
</span>
`;

exports[`<Icon /> renders with props 1`] = `
<span
  className="sd-a-icon sd-a-icon--menu sd-a-icon--positive sd-a-icon--major sd-a-icon-test"
  role="img"
>
  <svg
    aria-hidden="true"
    className="sd-a-icon__svg"
    focusable="false"
  />
</span>
`;
